# client

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: chat.rs  cli.rs  main.rs  terminal.rs
server/: Cargo.toml
server/src/: chat.rs  cli.rs
src/: chat.rs  cli.rs  main.rs  terminal.rs
types/: Cargo.toml
types/src/: lib.rs  server.rs  socket.rs  thread.rs
