[package]
name = "client_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
textwrap = "0.14"
console = "0.15.0"
dialoguer = "0.9.0"
rsa="0.5.0"
sha2="0.10.1"
rand = "0.8.4"
indicatif = "0.16.2"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }

